Make sure that the faked mouse event in DolphinViewAutoScroller::scrollViewport() gets the right keyboard modifiers. This fixes the problem that the previous selection is lost when several Ctrl-rubber band selections are made and the view scrolls or the mouse pointer gets close to the edge of the viewport.

BUG: 190703

svn path=/trunk/KDE/kdebase/apps/; revision=1034012